--- a/hadoophive/hiveserver2/Dockerfile
+++ b/hadoophive/hiveserver2/Dockerfile
@@ -9,6 +9,8 @@ RUN rm /opt/tez/lib/slf4j-reload4j-1.7.36.jar
 
 COPY core-site.xml $HADOOP_HOME/etc/hadoop/core-site.xml
 COPY hdfs-site.xml $HADOOP_HOME/etc/hadoop/hdfs-site.xml
+COPY hive-site.xml $HIVE_HOME/conf/hive-site.xml
+
 
 # Start HiveServer2
 CMD /opt/hive/bin/hive --skiphadoopversion --skiphbasecp --service hiveserver2
