--- a/hadoophive/docker-compose.yml
+++ b/hadoophive/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       SERVICE_OPTS: '-Xmx1G -Dhive.metastore.uris=thrift://metastore:9083'
       IS_RESUME: 'true'
       SERVICE_NAME: 'hiveserver2'
+      HADOOP_CONF_DIR: /opt/hadoop/etc/hadoop
     ports:
       - '10000:10000'
       - '10002:10002'
